Редактированиe Мобильного меню

--- a/index.html
+++ b/index.html
@@ -222,20 +222,6 @@
             <div class="slider-line">
               <div class="slider-item">
                 <div class="slider__link-wrp">
-                  <h4 class="slider__subtitle">Учебный проект</h4>
-                  <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
-                  </div>
-                </div>
-                <img
-                  class="slider-image"
-                  src="img/slider-projects/analytics.jpg"
-                  alt="Сайт Аналитик"
-                />
-              </div>
-              <div class="slider-item">
-                <div class="slider__link-wrp">
                   <h4 class="slider__subtitle">Проект для портфолио</h4>
                   <div>
                     <a
@@ -260,26 +246,18 @@
               </div>
               <div class="slider-item">
                 <div class="slider__link-wrp">
-                  <h4 class="slider__subtitle">
-                    Проект собранный на интенсиве
-                  </h4>
-                  <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
-                  </div>
-                </div>
-                <img
-                  class="slider-image"
-                  src="img/slider-projects/burger.jpg"
-                  alt="Сайт бургеры"
-                />
-              </div>
-              <div class="slider-item">
-                <div class="slider__link-wrp">
                   <h4 class="slider__subtitle">Проект с группой</h4>
                   <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                    <a
+                      class="slider__link-site"
+                      href="https://artiom30.github.io/team-projects/fire-money/"
+                      >Перейти на сайт</a
+                    >
+                    <a
+                      class="slider__link-code"
+                      href="https://github.com/Artiom30/team-projects/tree/main/fire-money"
+                      >Посмотреть код</a
+                    >
                   </div>
                 </div>
                 <img
@@ -292,8 +270,16 @@
                 <div class="slider__link-wrp">
                   <h4 class="slider__subtitle">Проект с группой</h4>
                   <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                    <a
+                      class="slider__link-site"
+                      href="https://artiom30.github.io/team-projects/replications-paintings/"
+                      >Перейти на сайт</a
+                    >
+                    <a
+                      class="slider__link-code"
+                      href="https://github.com/Artiom30/team-projects/tree/main/replications-paintings"
+                      >Посмотреть код</a
+                    >
                   </div>
                 </div>
                 <img
@@ -306,14 +292,60 @@
                 <div class="slider__link-wrp">
                   <h4 class="slider__subtitle">Учебный проект</h4>
                   <div>
-                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
-                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                    <a
+                      class="slider__link-site"
+                      href="https://nikdenis.github.io/Analytics_site/"
+                      >Перейти на сайт</a
+                    >
+                    <a
+                      class="slider__link-code"
+                      href="https://github.com/NikDenis/Analytics_site"
+                      >Посмотреть код</a
+                    >
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/analytics.jpg"
+                  alt="Сайт Аналитик"
+                />
+              </div>
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">Учебный проект</h4>
+                  <div>
+                    <a
+                      class="slider__link-site"
+                      href="https://nikdenis.github.io/LUXERIOS-FASHION/"
+                      >Перейти на сайт</a
+                    >
+                    <a
+                      class="slider__link-code"
+                      href="https://github.com/NikDenis/LUXERIOS-FASHION"
+                      >Посмотреть код</a
+                    >
                   </div>
                 </div>
                 <img
                   class="slider-image"
                   src="img/slider-projects/digital-marketing.jpg"
                   alt="Сайт маркетинговый"
+                />
+              </div>
+              <div class="slider-item">
+                <div class="slider__link-wrp">
+                  <h4 class="slider__subtitle">
+                    Проект собранный на интенсиве
+                  </h4>
+                  <div>
+                    <a class="slider__link-site" href="!#">Перейти на сайт</a>
+                    <a class="slider__link-code" href="!#">Посмотреть код</a>
+                  </div>
+                </div>
+                <img
+                  class="slider-image"
+                  src="img/slider-projects/burger.jpg"
+                  alt="Сайт бургеры"
                 />
               </div>
             </div>
@@ -1772,6 +1804,9 @@
                 alt="Гитхаб"
             /></a>
           </div>
+        </div>
+        <div class="page-footer__copyright">
+          <span>&copy Никишков Д. А., 2023</span>
         </div>
       </div>
     </footer>
