--- a/index.html
+++ b/index.html
@@ -1806,7 +1806,7 @@
           </div>
         </div>
         <div class="page-footer__copyright">
-          <span>&copy Никишков Д. А., 2023</span>
+          <span>&copy Д. А. Никишков, 2023</span>
         </div>
       </div>
     </footer>
