New Year's update

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <link rel="shortcut icon" href="img/logo/my-logo.svg" type="image/x-icon" />
   <link rel="stylesheet" href="style/normalize.css" />
   <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="style/new-year.css">
 </head>
 <body>
+  <div class="snow-blocks">
+    <div class="snow1"></div>
+    <div class="snow2"></div>
+  </div>
   <header class="page-header">
     <div class="center">
       <div class="page-header__wrp">
@@ -106,6 +111,7 @@
       </div>
     </div>
   </header>
+  <div class="girlianda"></div>
   <main>
     <section class="promo" id="001">
       <div class="center">
