--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
               <a href="https://gb.ru" target="_blank">GeekBrains!</a>
               Закончил курс в мае 2023 года по специальности "It-специалист
               Вёрстка"!В данный момент прохожу обучение по специальности
-              "Frontend-разработчик"! Мой опыт в сфере веб-верстки более 8-ми
-              месяцев, за этот период мною выполнены: 6 проектов в целях
-              учебной разработки, 1 проект на интенсиве от Айтилогии, 2
-              проекта сверстанные в команде онлайн и более двух проекта мною
+              "Frontend-разработчик"! Мой опыт в сфере веб-верстки более года, за этот период мною выполнены: 6 проектов
+              в целях
+              учебной разработки, 1 проект на интенсиве от Айтилогии, 3
+              проекта сверстанные в команде онлайн и более двух проектов мною
               лично.Владею адаптивной вёрсткой, БЭМ и также симантической
               вёрсткой. В свободное время я верстаю интересные макеты и
               постоянно совершенствую свои знания.
