turning off the New Year's mod

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="img/logo/my-logo.svg" type="image/x-icon" />
   <link rel="stylesheet" href="style/normalize.css" />
   <link rel="stylesheet" href="style/style.css" />
-  <link rel="stylesheet" href="style/new-year.css">
+<!--   <link rel="stylesheet" href="style/new-year.css"> -->
 </head>
 <body>
   <div class="snow-blocks">
